// Common types shared across all messages.

syntax = "proto3";

package dungeon.common;

option java_multiple_files = true;
option java_package = "core.network.proto.common";
option java_outer_classname = "CommonTypesProto";

// Represents a 2D point with float coordinates.
// Maps to: core.utils.Point
message Point {
  float x = 1;
  float y = 2;
}

// Represents a 2D vector.
// Maps to: core.utils.Vector2
message Vector2 {
  float x = 1;
  float y = 2;
}

// Represents viewing/movement direction.
// Maps to: core.utils.Direction
enum Direction {
  DIRECTION_UNSPECIFIED = 0;
  DIRECTION_UP = 1;
  DIRECTION_DOWN = 2;
  DIRECTION_LEFT = 3;
  DIRECTION_RIGHT = 4;
  DIRECTION_NONE = 5;
}

// Sound specification for entity audio.
// Maps to: core.sound.SoundSpec
message SoundSpec {
  // Globally unique instance identifier.
  int64 instance_id = 1;

  // The name of the sound asset to play (file name without extension).
  string sound_name = 2;

  // Base volume level before distance attenuation [0.0, 1.0].
  float base_volume = 3;

  // Whether the sound should loop indefinitely.
  bool looping = 4;

  // Playback pitch multiplier (1.0 = normal).
  float pitch = 5;

  // Stereo pan position (-1.0 = left, 0.0 = center, 1.0 = right).
  float pan = 6;

  // Maximum distance for sound audibility (-1 = infinite).
  float max_distance = 7;

  // Factor for distance-based volume attenuation.
  float attenuation_factor = 8;
}

// RGBA color representation.
message Color {
  // Packed RGBA value (0xRRGGBBAA).
  int32 rgba = 1;
}

// Generic key-value pair for extensibility.
message KeyValue {
  string key = 1;
  bytes value = 2; // Can contain any serialized data.
}

// Represents an item in inventory.
// Client reconstructs full Item object using REGISTERED_ITEMS map.
message Item {
  // Class path matching REGISTERED_ITEMS key (e.g., "ItemPotionHealth").
  string item_type = 1;

  // Current stack size.
  int32 stack_size = 2;

  // Maximum stack size for this item type.
  int32 max_stack_size = 3;

  // Item-specific parameters (e.g., "strength" -> "50" for potions).
  map<string, string> item_data = 4;
}
